Refactor Docker setup and API endpoints for production readiness and resolved the cors policy errors

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the Vite React application for production
-FROM node:slim-alpine AS build
+FROM node:alpine AS build
 
 WORKDIR /app
 
