--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 node_module
+**node_module**
 .env
+k8s/backend-secrets.y*ml
+*backend-secrets.y*ml
+*Secrets.y*ml
+*secrets.y*ml
+k8s/frontend-config.y*ml
+*frontend-config.y*ml
