--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -9,6 +9,13 @@ RUN npm install
 
 COPY . .
 
+# Inject VITE_API_URL at build time
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
+ARG PORT
+ENV PORT=$PORT
+
 RUN npm run build
 
 # Stage 2: Set up Nginx to serve the built app
