--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: frontend-service
@@ -7,8 +7,7 @@ spec:
     app: frontend
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 3000
-      NodePort: 30001
+      port: 3000
+      targetPort: 80
+      nodePort: 30001
   type: NodePort
-  
