--- a/kind-cluster-config.yaml
+++ b/kind-cluster-config.yaml
@@ -12,11 +12,13 @@ nodes:
             node-labels: "ingress-ready=true"
     extraPortMappings:
       - containerPort: 80
-        hostPort: 3000
+        hostPort: 3004
         protocol: TCP
       - containerPort: 443
         hostPort: 8443
         protocol: TCP
 
+  - role: worker
+    image: kindest/node:v1.31.2
   - role: worker
     image: kindest/node:v1.31.2
